Orbit-Platform/platform/kyverno/test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kyverno-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
      - name: nginx
        image: nginx
