Orbit-Platform/platform/kyverno/require-run-as-non-root.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-run-as-non-root
spec:
  validationFailureAction: Enforce
  background: true

  rules:
    - name: require-run-as-non-root
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: "Containers must set runAsNonRoot: true."

        pattern:
          spec:
            containers:
              - securityContext:
                  runAsNonRoot: true
